Updated padding, realigning input fields, changing field sizes, fixing backgroun color bug

--- a/bacteria-frontend/src/components/FormField.css
+++ b/bacteria-frontend/src/components/FormField.css
@@ -5,3 +5,6 @@
     font-size: 80%;
     word-wrap: break-word;
   }
+.bacteria-title-wrapper {
+  height: 30%;
+}
